syntax = "proto3";

option go_package = "./";

package feed;

message FeedRequest{
    string username = 1;
}

message Post{
    int32 postid = 1;
    string title = 2;
    string author = 3;
    string description = 4;
    string timestamp = 5;

}

message FeedResponse{
    repeated Post feedData =1;
}

service FeedService{
    rpc GetFeed(FeedRequest) returns (FeedResponse){}
}